<resources>
    <string name="app_name">Beatles</string>
    <string name="hello_world">Hello World!</string>
    <string name="open_registration">Регистрация игрока</string>
    <string name="registration_title">Регистрация игрока</string>
    <string name="label_full_name">ФИО</string>
    <string name="hint_full_name">Иванов Иван Иванович</string>
    <string name="label_gender">Пол</string>
    <string name="gender_male">Мужской</string>
    <string name="gender_female">Женский</string>
    <string name="label_course">Курс</string>
    <string name="label_difficulty_default">Сложность: 1</string>
    <string name="difficulty_format">Сложность: %1$d</string>
    <string name="label_birth_date">Дата рождения</string>
    <string name="label_birth_date_default">Выберите дату рождения</string>
    <string name="error_no_birth_date">Выберите дату рождения</string>
    <string name="button_submit">Зарегистрироваться</string>
    <string name="error_empty_name">Введите ФИО</string>
    <string name="error_no_gender">Выберите пол</string>
    <string name="error_no_course">Выберите курс</string>
    <string name="label_zodiac_image">Знак зодиака</string>
    <string name="tab_registration">Регистрация</string>
    <string name="tab_rules">Правила</string>
    <string name="tab_authors">Авторы</string>
    <string name="author_photo">Фото автора</string>
    <string name="tab_settings">Настройки</string>
    <string name="settings_speed_default">Скорость игры: 2</string>
    <string name="settings_speed_format">Скорость игры: %1$d</string>
    <string name="settings_max_bugs_default">Макс. тараканов: 5</string>
    <string name="settings_max_bugs_format">Макс. тараканов: %1$d</string>
    <string name="settings_bonus_interval_default">Интервал бонусов: 11 сек</string>
    <string name="settings_bonus_interval_format">Интервал бонусов: %1$d сек</string>
    <string name="settings_round_duration_default">Длительность раунда: 3 мин</string>
    <string name="settings_round_duration_format">Длительность раунда: %1$d мин</string>
    <string name="result_format">Игрок: %1$s\nПол: %2$s\nКурс: %3$d\nСложность: %4$d\nДата рождения: %5$s\nЗнак зодиака: %6$s</string>
</resources>